# substrate

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Pipfile  README.md  package-lock.json  package.json  pylintrc  pyproject.toml  setup.cfg  substrate.config.yaml  tox.ini
api/: substrate.config.yaml
examples/config/local/: substrate.config.yaml  vci.config.yaml
examples/config/local_multiple/: substrate.config.yaml  vci.config.yaml
examples/generic_deployment/: README.md  deploy.py  substrate.config.yaml
examples/hello_world/: README.md  deploy.sh  substrate.config.yaml
examples/jupyter_aws_deployment/: README.md  substrate.config.yaml
examples/local/: vci.config.yaml
examples/local_deployment/: README.md  deploy.py  substrate.config.yaml
examples/tapestry/: index.html
examples/tapestry/js/: main.js  tapestry.js
front_ends/cli/: deploy.sh
front_ends/jupyter/: deploy.ipynb
front_ends/python/: substrate.config.yaml
src/: cdk.json  substrate.py  vci.py
src/classes/: stack.py  swarm.py
src/classes/scripts/: node.sh
src/classes/tools/: tapestry.py  tool.py  vci.py
src/modules/: __init__.py  tapestry.py  vci.py
src/substrate/: __init__.py  __main__.py  substrate.py
src/substrate/classes/: __init__.py  stack.py  swarm.py
src/substrate/classes/scripts/: node.sh
src/substrate/classes/tools/: tapestry.py  vci.py
src/substrate/tapestry/config/: data.json
src/substrate/targets/: __init__.py  aws_stack.py  docker_swarm.py
src/substrate/tools/: DCHM.py  __init__.py  braid.py  dchm.py  generic_tool.py  geofabric.py  geofabric_nc_slicer.py  hello_world.py  nc_slicer.py  ospray_studio.py  tapestry.py  tool.py  vci.py
src/substrate/tools/braid/static/: app.html  d3.html
src/substrate/tools/geofabric/app/: index.html
src/substrate/tools/geofabric/app/css/: style.css
src/substrate/tools/geofabric/app/js/: main.js  tapestry.js  testing.js
src/substrate/tools/geofabric/config/: LFBB_input.json  LPRB_input.json  LPRB_output.json  LTTB_input.json  LTTB_output.json  PRB_output.json
src/substrate/tools/geofabric_nc_slicer/: Dockerfile
src/substrate/tools/geofabric_nc_slicer/app/: app.py  grapher.py  requirements.txt
src/substrate/tools/geofabric_nc_slicer/app/static/css/: style.css  tuts.css
src/substrate/tools/geofabric_nc_slicer/app/static/js/: main.js  tapestry.js
src/substrate/tools/geofabric_nc_slicer/app/templates/: index.html
src/substrate/tools/hello_world/: Dockerfile
src/substrate/tools/nc_slicer/app/: app.py  grapher.py  requirements.txt  utils.py
src/substrate/tools/nc_slicer/app/static/css/: style.css
src/substrate/tools/nc_slicer/app/static/js/: render.js
src/substrate/tools/nc_slicer/app/templates/: index.html
src/substrate/tools/vci/static/js/: helper.js
src/substrate/vci/static/js/: vci.js
tapestry/config/: data.json
vci/static/: index.html
vci/static/js/: app.js  d3.vci.js  d3app.js
vci/static/resources/: power.csv
