[project]
name = "seelabutk-substrate"
authors = [{name = "John Duggan", email = "jduggan1@vols.utk.edu"}]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent"
]
dependencies = [
	'aws-cdk.core ~= 1.147.0',
	'aws-cdk.aws-ec2 ~= 1.147.0',
	'aws-cdk.aws-efs ~= 1.147.0',
	'aws-cdk.aws-iam ~= 1.147.0',
	'docker ~= 5.0.3',
	'paramiko ~= 2.9.2',
	'PyYAML ~= 6.0'
]
description = "Automatically deploys visualization services via Docker Swarm"
entry-points = {console_scripts = {substrate = "substrate.substrate:main"}}
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
version = "0.17"

[project.urls]
Homepage = "https://github.com/seelabutk/substrate/"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
