[project]
name = "seelabutk-substrate"
authors = [{name = "John Duggan", email = "jduggan1@vols.utk.edu"}]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent"
]
dependencies = [
	'aws-cdk-lib ~= 2.24.1',
	'constructs ~= 10.1.11',
	'docker ~= 5.0.3',
	'paramiko ~= 2.9.2',
	'PyYAML ~= 6.0',
	'requests ~= 2.27.1'
]
description = "Automatically deploys visualization services via Docker Swarm"
entry-points = {console_scripts = {substrate = "substrate.substrate:main"}}
license = {text = "CC-BY-4.0"}
readme = "README.md"
requires-python = ">=3.7"
version = "1.1.0"

[project.urls]
Homepage = "https://github.com/seelabutk/substrate/"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
