[metadata]
license_files = LICENSE
name = seelabutk-substrate
version = 0.4
author = John Duggan
author_email = jduggan1@vols.utk.edu
description = Automatically deploys visualization services via Docker Swarm
long_description = Please visit https://github.com/seelabutk/substrate/ to view the documentation.
url = https://github.com/seelabutk/substrate/
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
  aws-cdk.core ~= 1.147.0
  aws-cdk.aws-ec2 ~= 1.147.0
  aws-cdk.aws-efs ~= 1.147.0
  aws-cdk.aws-iam ~= 1.147.0
  docker ~= 5.0.3
  paramiko ~= 2.9.2
  PyYAML ~= 6.0
package_dir =
  = src
packages = find:
python_requires = >= 3.7

[options.entry_points]
console_scripts =
  substrate = substrate.substrate:main

[options.packages.find]
where = src

[options.package_data]
substrate = tools/tapestry/app/*, tools/tapestry/app/css/*, tools/tapestry/app/js/*, tools/tapestry/config/*, tools/vci/static/*, classes/scripts/node.sh
