[options]
include_package_data = True
install_requires =
  aws-cdk.core ~= 1.147.0
  aws-cdk.aws-ec2 ~= 1.147.0
  aws-cdk.aws-efs ~= 1.147.0
  aws-cdk.aws-iam ~= 1.147.0
  docker ~= 5.0.3
  paramiko ~= 2.9.2
  PyYAML ~= 6.0
package_dir =
  = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
substrate = tools/tapestry/app/*, tools/tapestry/app/css/*, tools/tapestry/app/js/*, tools/tapestry/config/*, tools/vci/static/*, classes/scripts/node.sh
