[options]
include_package_data = True
install_requires =
  aws-cdk-lib ~= 2.24.1
  constructs ~= 10.1.11
  docker ~= 5.0.3
  paramiko ~= 2.11.0
  PyYAML ~= 6.0
  requests ~= 2.27.1
package_dir =
  = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
substrate = tools/tapestry/app/*, tools/tapestry/app/css/*, tools/tapestry/app/js/*, tools/tapestry/config/*, tools/vci/static/*
